--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ p{
   font-family: 'Raleway', sans-serif;
 }
 
+svg{
+  margin: 0 10vw 0 10vw;
+}
+
+
 .mainContainer{
   display: flex;
   flex-direction: column;
@@ -20,7 +25,7 @@ p{
 }
 
 .introduction{
-  padding: 0 0 3vh 0;
+  margin-bottom: 10vmin;
   line-height: 1.5em;
 }
 
