fix the sorting problem

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p{
 
 .selected{
   border:0.1em solid black;
-  background-color: yellow;
+  background-color: white;
   height: 23px;
   padding: 25px 40px;
   text-align: center;
